[project]
name = "cpp-refresh"
version = "0.1.0"
description = "Practice C++"
authors = [{ name = "Syen Park", email = "syen.park@connect.ust.hk" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyzmq>=27.1.0",
    "typer>=0.21.1",
]

[project.scripts]
dummy_yolo = "python._cli:app"

[project.urls]
Repository = "https://github.com/syenpark/cpp_refresh"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "COM812", "D107", "ISC001"]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
".mkdocs/hooks/**" = ["INP001"]
"tests/**" = ["S101", "DTZ001"]  # S101: allow assert, DTZ001: allow naive datetime (HKT timestamps)

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src/python"]
namespace_packages = true
explicit_package_bases = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "src/python/__main__.py",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
branch = true
parallel = true
source = ["python"]

[tool.coverage.paths]
source = ["python"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
